--- a/model/category_mapping.json
+++ b/model/category_mapping.json
@@ -1,1 +1,1 @@
-{"eye_color": ["eye_color_blue", "eye_color_brown", "eye_color_gray", "eye_color_green"], "fur_length": ["fur_length_long", "fur_length_medium", "fur_length_short"]}
+{"eye_color": ["blue", "brown", "gray", "green"], "fur_length": ["long", "medium", "short"]}
